resources/public/css/style.css
/* Hide for mobile
.buckit--sidebar {
    display: none;
}

@media (min-width: 768px) {
    .buckit--sidebar {
        display: block;
    }
}
*/

/*
 * Styling done with help from https://getbootstrap.com/examples/dashboard/#
 */
body {
    padding-top: 50px;
}

/*
 * Sidebar
 */
.buckit--sidebar-wrapper {
    /* by default, do not show the sidebar. It is only shown on larger screens */
    display: none;
}

@media (min-width: 768px) {
    .buckit--sidebar-wrapper {
        display: block;
        position: fixed;
        top: 51px;
        bottom: 0;
        padding: 0;
        padding-top: 20px;
        background-color: #f5f5f5;
    }
}

.buckit--sidebar li.active a {
    color: #fff;
    background-color: #428bca;
}

/*
 * Transactions toolbar
 */
.buckit--transactions-toolbar {
    padding-left: 15px;
    padding-right: 15px;
}

/*
 * Ledger
 */
.buckit--ledger span {
    padding: 0;
}

.buckit--ledger-header span {
    font-weight: bold;
}

.buckit--ledger-row {
    border-top: 1px solid #eee;
}

.buckit--ledger-row.active {
    background-color: #ffffab;
}

.buckit--ledger-row:not(.active):hover {
    background-color: #f5f5f5;
}

.buckit--ledger-row > div,
.buckit--ledger-row > form {
    padding: 2px;
}

.buckit--ledger-editor-input {
    padding: 0;
}

.buckit--ledger-row div.btn-toolbar {
    padding-top: 2px;
}

.buckit--ledger span.expense::before {
    color: red;
}

.buckit--ledger span.income::before {
    color: green;
}

/*
 * Transactions view
 */
.buckit--transactions-view .buckit--ledger {
    margin-top: 10px;
}

/*
 * Main content
 */
.buckit--main {
    /* FIXME this probs don't look right on mobile */
    padding: 20px;
}

.buckit--transaction-editor button.btn-xs {
    width: 50px;
}

/*
 * Spinner
 *
 * http://tobiasahlin.com/spinkit/
 */
.buckit--spinner {
  width: 40px;
  height: 40px;
  margin: 100px auto;
  background-color: #333;

  border-radius: 100%;
  -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
  animation: sk-scaleout 1.0s infinite ease-in-out;
}

@-webkit-keyframes sk-scaleout {
  0% { -webkit-transform: scale(0) }
  100% {
    -webkit-transform: scale(1.0);
    opacity: 0;
  }
}

@keyframes sk-scaleout {
  0% {
    -webkit-transform: scale(0);
    transform: scale(0);
  } 100% {
    -webkit-transform: scale(1.0);
    transform: scale(1.0);
    opacity: 0;
  }
}

.buckit--loading-overlay {
    position: fixed;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(255, 255, 255, 0.5);
}

/*
 * Button spinner
 * http://jsfiddle.net/AndrewDryga/zcX4h/1/
 */
.buckit--btn-spinner {
    display: inline-block;
    opacity: 0;
    width: 0;

    -webkit-animation: spin 1.5s infinite linear;
    -moz-animation: spin 1.5s infinite linear;
    -o-animation: spin 1.5s infinite linear;
    animation: spin 1.5s infinite linear;
}

@-webkit-keyframes spin {
    0% {
        -webkit-transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(359deg);
    }
}

.show-spinner .buckit--btn-spinner {
    opacity: 1;
    margin-left: 3px;
    margin-right: 3px;
}

.show-spinner.btn-xs .buckit--btn-spinner {
    width: 10px;
    /* margin: 3px; */
}

